updated task 6 to 10

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </script>
 </head>
 <body>
-
+    <center> <h1>TASK 0.1 </h1></center>
+    <p> Convert this pseudocode into actual code. Make it run. Make sure you understand the results. This is a fundamental lesson:</p>
 </body>
 </html>
