--- a/task_0.2.html
+++ b/task_0.2.html
@@ -20,6 +20,7 @@
     </script>
 </head>
 <body>
-    
+    <center> <h1>TASK 0.2 </h1></center>
+    <p> Convert this pseudocode into actual code. Make it run. Make sure you understand the results. This is a fundamental lesson. If you don’t understand the results then spend some time Googling BODMAS. </p>
 </body>
 </html>
