--- a/task_0.3.html
+++ b/task_0.3.html
@@ -16,6 +16,8 @@
 
 </head>
 <body>
-    
+    <center> <h1>TASK 0.3 </h1></center>
+    <p> Write a function named hello, it needs to take in a string as an argument. The function should work like this:
+        eg: hello("Tshepo") should output</p>
 </body>
 </html>
