--- a/task_0.4.html
+++ b/task_0.4.html
@@ -20,6 +20,11 @@
     </script>
 </head>
 <body>
-    
+    <center> <h1>TASK 0.4 </h1></center>
+    <p> Write a function named even_or_odd or evenOrOdd. Tha name of the function depends on the conventions of the language you are writing in. If you don’t know what name to choose then check the clean code guidelines.
+
+        Your function should take an integer and print in the word “even” or “odd”
+        
+        eg, if the input is 3 then the output is “odd”. If the input is 4 then the output is “even”</p>
 </body>
 </html>
